Fix images overflowing

--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -47,3 +47,5 @@ pre > code {
 }
 
 a:hover { cursor: url('/cursors/finger.cur'), auto; }
+
+img { max-width: 100%; }
